--- a/what/pom.xml
+++ b/what/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.my.company</groupId>
 	<artifactId>board</artifactId>
-	<name>just</name>
+	<name>what</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 <properties>
